DOM manipulation methods

--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -47,6 +47,10 @@
             l.style.color = "pink"
         })
 
+        const ul2 = document.querySelector(".ul2")
+        ul2.style.width = "40%";
+        ul2.style.margin = "0 auto";
+
         const liList2 = document.querySelectorAll(".liclass2")
         liList2.forEach((l) => {
             let s = l.style;
