--- a/Projects/BMI_Calc/index.html
+++ b/Projects/BMI_Calc/index.html
@@ -6,8 +6,10 @@
     <title>BMI Calc</title>
     <link rel="stylesheet" href="../../../css/output.css">
 </head>
-<body>
-    <h1 class="text-red-600 bg-purple-300 text-3xl font-bold text-center">BMI Calculator</h1>
+<body class="w-[100%] h-screen flex justify-center items-center">
+    <div class="main w-[40%] h-[30vw] bg-blue-400 rounded-xl">
+
+        <h1 class="text-red-600 rounded-t-xl bg-purple-300 overflow-hidden text-3xl font-bold text-center">BMI Calculator</h1>
     <div class="form bg-slate-300 mx-auto px-5 py-6 w-[400px] my-6">
         <form action="#" class="bg-slate-300 flex justify-between items-center flex-col gap-[20px]">
             <div class="height flex justify-between items-center w-[300px]">
@@ -30,6 +32,7 @@
         <p>Normal: 18.6 - 24.9</p>
         <p>Over weight: 25 - 29.9</p>
         <p>Obese: 30 or more</p>
+    </div>
     </div>
     <script src="bmi.js"></script>
 </body>
